<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:accessibilityLiveRegion="none"
        android:fontFamily="@font/bungee_inline"
        android:gravity="center"
            android:text="@string/drunk_racing"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"

        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/texteJoueur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/bungee_inline"
            android:text="@string/nom_du_joueur"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nomJoueur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:fontFamily="@font/bungee_inline"
            android:gravity="center"
            android:hint="@string/nom"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageVoiture"
            android:layout_width="206dp"
            android:layout_height="166dp"
            android:layout_marginRight="40dp"
            app:srcCompat="@drawable/car_score" />

        <LinearLayout
            android:layout_width="213dp"
            android:layout_height="166dp"
            android:layout_marginStart="-8dp"
            android:layout_marginLeft="-8dp"
            android:layout_toEndOf="@+id/imageVoiture"
            android:layout_toRightOf="@+id/imageVoiture"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/bungee_inline"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="#000000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/résultat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:fontFamily="@font/bungee_inline"
                android:gravity="center"
                android:hint="@string/r_sultat"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/ancienScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/bungee_inline"
                android:gravity="center"
                android:text="@string/dernier_score"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/ancienResultat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee_inline"
                android:gravity="center"
                android:hint="@string/ancien_r_sultat"
                android:textColor="#000000" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/boutonJouer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/bungee_inline"
            android:text="@string/jouer"
            android:textColor="#000000"
            android:textSize="40sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/boutonSauvegarder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/save" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/se_souvenir_de_moi" />
    </LinearLayout>

</LinearLayout>